# uptimesquirrel-agent-pypi

./: .gitignore  LICENSE  MANIFEST.in  NEXT_STEPS.md  PUBLISHING.md  README.md  README_GITHUB.md  README_PACKAGING.md  build-and-publish.sh  pyproject.toml  setup-github-repo.sh  setup.py  test-config.conf
.github/workflows/: publish.yml
uptimesquirrel_agent/: __init__.py  agent.py
uptimesquirrel_agent/systemd/: uptimesquirrel-agent.service
